--- a/index.html
+++ b/index.html
@@ -1,11 +1,177 @@
-<nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <ul class="nav nav-pills">
-        <li class="nav-item">
-            <a class="nav-link" href="#fat">@fat</a>
-        </li>
-    </ul>
-</nav>
-<div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
-    <h4 id="fat">@fat</h4>
+<html>
+<head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="images/favicon.jpeg" type="image/x-icon">
+
+<style>
+body{
+background-color:white;}
+
+.card1 {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 50rem;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+  .card1:hover{
+    box-shadow: 0 10px 10px 0 red;
+  }
+.card2 {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 50rem;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+  .card2:hover{
+    box-shadow: 0 10px 10px 0 red;
+  }
+.card3 {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 50rem;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+  .card3:hover{
+    box-shadow: 0 10px 10px 0 red;
+  }
+.card4 {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+.card5 {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+button  {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: purple;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
+}
+</style>
+</head>
+<body>
+
+<h2 style="text-align:center">MY Applications</h2>
+
+<div class="card1">
+  <img src="images/AI Chat.jpeg" alt="app" style="width:100%">
+  <h1>Artificial intelligence (AI) </h1>
+  <p class="title">Developed by</p><b>Nikhil Kumar</b>
+  <!-- <p>Description</p> -->
+  <div style="margin: 24px 0;">
+    <a href="#"><i class="fa fa-dribbble"></i></a> 
+    <a href="#"><i class="fa fa-twitter"></i></a>  
+    <a href="#"><i class="fa fa-linkedin"></i></a>  
+    <a href="#"><i class="fa fa-facebook"></i></a> 
+  </div>
+  <p><a href="apks/app-debug.apk" download class="btn btn-success p-2 m-3">Download</a></p>
 </div>
+
+<div class="card3">
+  <img src="images/AI.jpeg" alt="app" style="width:100%">
+  <h1>Image Generator AI</h1>
+  <p class="title">Developed by</p><b>Nikhil Kumar </b>
+  <!-- <p>Description</p> -->
+  <div style="margin: 24px 0;">
+    <a href="#"><i class="fa fa-dribbble"></i></a> 
+    <a href="#"><i class="fa fa-twitter"></i></a>  
+    <a href="#"><i class="fa fa-linkedin"></i></a>  
+    <a href="#"><i class="fa fa-facebook"></i></a> 
+  </div>
+  <p><a href="apks/imageai.apk" download class=" btn btn-success p-2 m-3">Download</a></p>
+</div>
+
+
+
+
+
+
+
+
+<!-- <div class="card2">
+  <img src="images/Notes.png" alt="app" style="width:100%">
+  <h1>Notes </h1>
+  <p class="title">Developed by</p><b>Nikhil Kumar</b>
+  <p>Description</p>
+  <div style="margin: 24px 0;">
+    <a href="#"><i class="fa fa-dribbble"></i></a> 
+    <a href="#"><i class="fa fa-twitter"></i></a>  
+    <a href="#"><i class="fa fa-linkedin"></i></a>  
+    <a href="#"><i class="fa fa-facebook"></i></a> 
+  </div>
+  <p><a href="apks/Notes.apk" download class="btn btn-success p-2 m-3"> Download </a></p>
+</div> -->
+<div class="card3">
+  <img src="images/OIP.jpg" alt="app" style="width:100%">
+  <h1>Calculator</h1>
+  <p class="title">Developed by</p><b>Nikhil Kumar </b>
+  <!-- <p>Description</p> -->
+  <div style="margin: 24px 0;">
+    <a href="#"><i class="fa fa-dribbble"></i></a> 
+    <a href="#"><i class="fa fa-twitter"></i></a>  
+    <a href="#"><i class="fa fa-linkedin"></i></a>  
+    <a href="#"><i class="fa fa-facebook"></i></a> 
+  </div>
+  <p><a href="apks/calculator(2).apk" download class=" btn btn-success p-2 m-3">Download</a></p>
+</div>
+<!-- <div class="card4">
+  <img src="app.jpg" alt="app" style="width:100%">
+  <h1>App Name</h1>
+  <p class="title">Developed by</p>
+  <p>Description</p>
+  <div style="margin: 24px 0;">
+    <a href="#"><i class="fa fa-dribbble"></i></a> 
+    <a href="#"><i class="fa fa-twitter"></i></a>  
+    <a href="#"><i class="fa fa-linkedin"></i></a>  
+    <a href="#"><i class="fa fa-facebook"></i></a> 
+  </div>
+  <p><button>Download</button></p>
+</div>
+<div class="card5">
+  <img src="app.jpg" alt="app" style="width:100%">
+  <h1>App Name</h1>
+  <p class="title">Developed by</p>
+  <p>Description</p>
+  <div style="margin: 24px 0;">
+    <a href="#"><i class="fa fa-dribbble"></i></a> 
+    <a href="#"><i class="fa fa-twitter"></i></a>  
+    <a href="#"><i class="fa fa-linkedin"></i></a>  
+    <a href="#"><i class="fa fa-facebook"></i></a> 
+  </div>
+  <p><button>Download</button></p>
+</div> -->
+</body>
+</html>
