--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ button:hover, a:hover {
     <a href="#"><i class="fa fa-linkedin"></i></a>  
     <a href="#"><i class="fa fa-facebook"></i></a> 
   </div>
-  <p><a href="apks/app-debug.apk" download class="btn btn-success p-2 m-3">Download</a></p>
+  <p><a href="https://databasebasicquery.blogspot.com/" download class="btn btn-success p-2 m-3">Download</a></p>
 </div>
 
 <div class="card3">
@@ -111,7 +111,7 @@ button:hover, a:hover {
     <a href="#"><i class="fa fa-linkedin"></i></a>  
     <a href="#"><i class="fa fa-facebook"></i></a> 
   </div>
-  <p><a href="apks/imageai.apk" download class=" btn btn-success p-2 m-3">Download</a></p>
+  <p><a href="https://phplearnap.blogspot.com/" download class=" btn btn-success p-2 m-3">Download</a></p>
 </div>
 
 
@@ -145,7 +145,7 @@ button:hover, a:hover {
     <a href="#"><i class="fa fa-linkedin"></i></a>  
     <a href="#"><i class="fa fa-facebook"></i></a> 
   </div>
-  <p><a href="apks/calculator(2).apk" download class=" btn btn-success p-2 m-3">Download</a></p>
+  <p><a href="http://bharattravels.rf.gd/" download class=" btn btn-success p-2 m-3">Download</a></p>
 </div>
 <!-- <div class="card4">
   <img src="app.jpg" alt="app" style="width:100%">
