--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ button:hover, a:hover {
 </div>
 
 <div class="card3">
-  <img src="images/AI.jpeg" alt="app" style="width:100%;">
+  <img src="https://apkstores.netlify.app/images/AI.jpeg" alt="app">
   <h1>Image Generator AI</h1>
   <p class="title">Developed by</p><b>Nikhil Kumar </b>
   <!-- <p>Description</p> -->
@@ -132,7 +132,7 @@ button:hover, a:hover {
 
 
 <!-- <div class="card2">
-  <img src="images/Notes.png" alt="app" style="width:100%">
+  <img src="https://apkstores.netlify.app/images/Notes.jpeg" alt="app">
   <h1>Notes </h1>
   <p class="title">Developed by</p><b>Nikhil Kumar</b>
   <p>Description</p>
@@ -145,7 +145,7 @@ button:hover, a:hover {
   <p><a href="apks/Notes.apk" download class="btn btn-success p-2 m-3"> Download </a></p>
 </div> -->
 <div class="card3">
-  <img src="images/OIP.jpg" alt="app" style="width:100%">
+  <img src="https://apkstores.netlify.app/images/calculator.jpeg" alt="app">
   <h1>Calculator</h1>
   <p class="title">Developed by</p><b>Nikhil Kumar </b>
   <!-- <p>Description</p> -->
