--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ button:hover, a:hover {
 <h2 style="text-align:center">MY Applications</h2>
 
 <div class="card1">
-  <img src="images/AI Chat.jpeg" alt="app" style="width:100%">
+  <img src="https://apkstores.netlify.app/images/AI Chat.jpeg" alt="app" style="width:100%">
    <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=621864&format=728x90&ga=g"></script>
 <noscript><a href="https://yllix.com/publishers/621864" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
   <h1>Artificial intelligence (AI) </h1>
@@ -145,7 +145,7 @@ button:hover, a:hover {
   <p><a href="apks/Notes.apk" download class="btn btn-success p-2 m-3"> Download </a></p>
 </div> -->
 <div class="card3">
-  <img src="https://apkstores.netlify.app/images/calculator.jpeg" alt="app">
+  <img src="https://apkstores.netlify.app/images/calculator.jpeg" alt="app" style="width: 25rem;">
   <h1>Calculator</h1>
   <p class="title">Developed by</p><b>Nikhil Kumar </b>
   <!-- <p>Description</p> -->
