--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ button:hover, a:hover {
 <h2 style="text-align:center">MY Applications</h2>
 
 <div class="card1">
-  <img src="https://apkstores.netlify.app/images/AI.jpeg" alt="app" style="width:100%">
+  <img src="https://apkstores.netlify.app/images/AI.jpeg" alt="app">
    <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=621864&format=728x90&ga=g"></script>
 <noscript><a href="https://yllix.com/publishers/621864" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
   <h1>Artificial intelligence (AI) </h1>
