--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@ button:hover, a:hover {
 </div>
 
 <div class="card3">
-  <img src="https://apkstores.netlify.app/images/Notes.jpeg" alt="app">
+  <img src="https://apkstores.netlify.app/images/Notes.jpeg" alt="app" style="
+    border-radius: 5rem;
+    position: relative;
+    top: 7px;
+">
   <h1>Image Generator AI</h1>
   <p class="title">Developed by</p><b>Nikhil Kumar </b>
   <!-- <p>Description</p> -->
