--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ background-color:white;}
 .card1 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 50rem;
-  margin: auto;
+margin-top: 2rem;
   text-align: center;
   font-family: arial;
 }
@@ -22,7 +22,7 @@ background-color:white;}
 .card2 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 50rem;
-  margin: auto;
+margin-top: 2rem;
   text-align: center;
   font-family: arial;
 }
@@ -32,7 +32,7 @@ background-color:white;}
 .card3 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 50rem;
-  margin: auto;
+margin-top: 2rem;
   text-align: center;
   font-family: arial;
 }
@@ -42,14 +42,14 @@ background-color:white;}
 .card4 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
-  margin: auto;
+margin-top: 2rem;
   text-align: center;
   font-family: arial;
 }
 .card5 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
-  margin: auto;
+margin-top: 2rem;
   text-align: center;
   font-family: arial;
 }
