--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 <style>
 body{
-background-color:white;}
-
+background-color:white;
+ display: grid;
+justify-content: center;}
 .card1 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 50rem;
