--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@ button:hover, a:hover {
   </div>
   <p><a href="apks/Notes.apk" download class="btn btn-success p-2 m-3"> Download </a></p>
 </div> -->
+  <iframe width="728" height="90" frameborder="0" scrolling="no" src="//runative-syndicate.com/iframes2/c81ccc19012f41798181e46485eae3db.html?extid={extid}"></iframe>
 <div class="card3">
   <img src="https://apkstores.netlify.app/images/calculator.jpeg" alt="app" style="width: 25rem;">
   <h1>Calculator</h1>
